# cpp_FEM_multiphysics

./: .gitignore  CMakeLists.txt  README.md  prompt.md  readme.md
.github/workflows/: c-cpp.yml
data/: Mesh.mphtxt  circle_mesh.mphtxt  electroThermalMesh_3D.mphtxt  electroThermalResults.vtu  electroThermalResults_2D.vtu  electroThermalResults_3D.vtu
dev-log/: plan1_2.md  report1_1.md  report1_2.md
docs/: core.md  coupling.md  exceptions.md  io.md  physics.md  solver.md  utils.md
docs/core/: core.md  coupling.md  material.md  mesh.md
include/core/: AnalysisTypes.hpp  BoundaryCondition.hpp  CouplingManager.hpp  DOFManager.hpp  ElectroThermalCoupling.hpp  FEValues.hpp  LinearSolver.hpp  Material.hpp  Mesh.hpp  Problem.hpp  ReferenceElement.hpp
include/core/bcs/: BoundaryCondition.hpp
include/core/coupling/: Coupling.hpp  CouplingManager.hpp  ElectroThermalCoupling.hpp
include/core/material/: Material.hpp  MaterialProperty.hpp  Variable.hpp  VariableManager.hpp
include/core/mesh/: Element.hpp  ElementGeometry.hpp  LineElement.hpp  Mesh.hpp  Node.hpp  TetElement.hpp  Trielement.hpp
include/core/sources/: PrescribedCurrentDensity.hpp  SourceTerm.hpp  VolumetricSource.hpp
include/io/: Exporter.hpp  Importer.hpp
include/physics/: Current1D.hpp  Current2D.hpp  Current3D.hpp  EMag1D.hpp  EMag2D.hpp  Heat1D.hpp  Heat2D.hpp  Heat3D.hpp  Magnetic1D.hpp  Magnetic2D.hpp  Magnetic3D.hpp  PhysicsField.hpp
include/post/: HeatFluxCalculator.hpp  MagneticFieldCalculator.hpp  PostProcessor.hpp
include/solver/: CoupledElectroThermalSolver.hpp  LinearSolver.hpp  SingleFieldSolver.hpp  Solver.hpp  SolverFactory.hpp
include/utils/: Exceptions.hpp  InterpolationUtilities.hpp  NodeReordering.hpp  Profiler.hpp  Quadrature.hpp  ShapeFunctions.hpp  SimpleLogger.hpp
legacy/: CMakeLists.txt
legacy/src/: Analysis.cpp  Analysis.h  BoundaryConditions.h  Mesh.cpp  Param.h  Solver.cpp  Solver.h  main.cpp  utils.h
legacy/test/: test.cpp
reports/: report1.md
src/: Analysis.cpp  Analysis.h  HeatField.cpp  HeatField.h  Mesh.cpp  Mesh.h  Solver.cpp  Solver.h  main.cpp
src/core/: BoundaryCondition.cpp  Coupling.cpp  CouplingManager.cpp  DOFManager.cpp  ElectroThermalCoupling.cpp  Element.cpp  FEValues.cpp  Material.cpp  Mesh.cpp  Node.cpp  Problem.cpp  ReferenceElement.cpp  TetElement.cpp  Trielement.cpp
src/core/bcs/: BoundaryCondition.cpp
src/core/coupling/: CouplingManager.cpp  ElectroThermalCoupling.cpp
src/core/material/: Material.cpp  MaterialProperty.cpp  Variable.cpp  VariableManager.cpp
src/core/mesh/: Element.cpp  ElementGeometry.cpp  FEValues.cpp  LineElement.cpp  Mesh.cpp  Node.cpp  TetElement.cpp  Trielement.cpp
src/core/sources/: PrescribedCurrentDensity.cpp  VolumetricSource.cpp
src/io/: Exporter.cpp  Importer.cpp
src/physics/: Current1D.cpp  Current2D.cpp  Current3D.cpp  EMag1D.cpp  EMag2D.cpp  Heat1D.cpp  Heat2D.cpp  Heat3D.cpp  Magnetic1D.cpp  Magnetic2D.cpp  Magnetic3D.cpp  PhysicsField.cpp
src/post/: HeatFluxCalculator.cpp  MagneticFieldCalculator.cpp
src/solver/: CoupledElectroThermalSolver.cpp  SingleFieldSolver.cpp  SolverFactory.cpp
src/utils/: InterpolationUtilities.cpp  Profiler.cpp  Quadrature.cpp  ShapeFunctions.cpp
tests/: self_contained_test_for_single_fields.cpp  test_cauchy.cpp  test_comsol_EMag2D.cpp  test_comsol_coupled2D.cpp  test_comsol_coupled_2D.cpp  test_comsol_current_2D.cpp  test_coupled_1D.cpp  test_coupled_1d.cpp  test_coupled_2D.cpp  test_current_2D.cpp  test_emag_2D.cpp  test_fe_values.cpp  test_for_electro_thermal_2d.cpp  test_for_electro_thermal_3d.cpp  test_for_electro_thermal_3d_order2_element.cpp  test_for_electro_thermal_linear_element.cpp  test_for_electro_thermal_transient_3d.cpp  test_for_electro_thermal_transient_solver.cpp  test_heat_2D.cpp  test_heat_3D.cpp  test_magnetostatics_3d.cpp  test_mass_matrix.cpp  test_neumann.cpp  test_self_contained_for_electro_thermal.cpp  test_transient_1D.cpp  test_transient_2D.cpp  test_transient_coupled_1D.cpp  test_transient_coupled_2D.cpp
